* Changelog
** Unreleased 9.0.1
  * Add notification handlers for Deno language server (~deno/didRefreshDenoConfigurationTree~, ~deno/didChangeDenoConfiguration~, ~deno/didUpgradeCheck~).
  * Fix "Unknown notification: semgrep/rulesRefreshed" warning in lsp-semgrep client.
  * Add ~lsp-install-server~ support for Deno LSP via npm.
  * Add diagnostic and formatter custom settings for [[https://github.com/rcjsuen/dockerfile-language-server-nodejs][Dockerfile language server]].
  * Fix "Eager macro-expansion failure" errors with lsp-interface pcase patterns (see #4723)
  * Add support for [[https://github.com/Myriad-Dreamin/tinymist][Typst (Tinymist)]] language server.
  * Add support for ~just~ files through just-lsp.
  * Add support for RON files through ron-lsp.
  * Add explicit flag to enable (or disable) JSON validation.
  * Fix Accommodate renaming of lsp-postgres binaries
  * Fix =lsp-org= for org >= 9.7 (see #4300)
  * Add format on save support
  * Fix beancount journal file init option
  * Add support for [[https://github.com/glehmann/earthlyls][earthlyls]]
  * Add support for GNAT Project (~gpr-mode~, ~gpr-ts-mode~).
  * Add SQL support
  * Add support for Meson build system. (~meson-mode~).
  * Add support for go to definition for external files (.dll) in CSharp projects for OmniSharp server.
  * Added a new optional ~:action-filter~ argument when defining LSP clients that allows code action requests to be modified before they are sent to the server. This is used by the Haskell language server client to work around an ~lsp-mode~ parsing quirk that incorrectly sends ~null~ values instead of ~false~ in code action requests.
  * Add support for C# via the [[https://github.com/dotnet/roslyn/tree/main/src/LanguageServer][Roslyn language server]].
  * Add basic support for [[https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#textDocument_pullDiagnostics][pull diagnostics]] requests.