@@ -594,6 +594,21 @@ if their major-mode is in the list."
   :type '(repeat symbol)
   :group 'lsp-mode)
 
+(defcustom lsp-fix-all-on-save nil
+  "If non-nil run `source.fixAll' code action on save.
+This applies all auto-fixable issues before saving.
+To only apply to specific modes see `lsp-fix-all-on-save-list'."
+  :type 'boolean
+  :safe #'booleanp
+  :local t
+  :group 'lsp-mode)
+
+(defcustom lsp-fix-all-on-save-list '()
+  "If the list is empty apply fixAll to all buffers on save.
+Else only apply fixAll if their major-mode is in the list."
+  :type '(repeat symbol)
+  :group 'lsp-mode)
+
 (defcustom lsp-after-apply-edits-hook nil
   "Hooks to run when text edit is applied.
 It contains the operation source."
@@ -5248,6 +5263,18 @@ if it's closing the last buffer in the workspace."
       (when (member major-mode lsp-format-buffer-on-save-list)
         (lsp-format-buffer)))))
 
+(defun lsp--fix-all-before-save ()
+  "Run `source.fixAll' code action before save if configured.
+This is controlled by `lsp-fix-all-on-save' and `lsp-fix-all-on-save-list'."
+  (with-demoted-errors "Error in 'lsp--fix-all-before-save': %S"
+    (when (and lsp-fix-all-on-save
+               (lsp-workspaces)
+               (or (not lsp-fix-all-on-save-list)
+                   (member major-mode lsp-fix-all-on-save-list)))
+      (condition-case nil
+          (lsp-execute-code-action-by-kind-buffer-wide "source.fixAll")
+        (lsp-no-code-actions nil)))))
+
 (defun lsp--on-auto-save ()
   "Handler for auto-save."
   (when (lsp--send-will-save-p)
@@ -6129,10 +6156,17 @@ It will show up only if current point has signature help."
            (lsp-workspaces))
    (gethash command lsp--default-action-handlers)))
 
-(defun lsp--text-document-code-action-params (&optional kind)
-  "Code action params."
-  (let* ((diagnostics (lsp-cur-possition-diagnostics))
-         (range (cond ((use-region-p)
+(defun lsp--text-document-code-action-params (&optional kind buffer-wide)
+  "Code action params.
+When BUFFER-WIDE is non-nil, use entire buffer range and all diagnostics.
+This is useful for source actions like `source.fixAll' that operate on the
+whole buffer rather than the current position."
+  (let* ((diagnostics (if buffer-wide
+                          (apply #'vector (lsp--get-buffer-diagnostics))
+                        (lsp-cur-possition-diagnostics)))
+         (range (cond (buffer-wide
+                       (lsp--region-to-range (point-min) (point-max)))
+                      ((use-region-p)
                        (lsp--region-to-range (region-beginning) (region-end)))
                       (diagnostics
                        (let* ((start (point)) (end (point)))
@@ -6367,6 +6401,35 @@ execute a CODE-ACTION-KIND action."
             (lsp--info ,(format "%s action not available" code-action-kind))))))))
 
 (lsp-make-interactive-code-action organize-imports "source.organizeImports")
+
+(defun lsp-code-actions-buffer-wide (&optional kind)
+  "Retrieve the code actions for the entire buffer.
+This is useful for source actions like `source.fixAll' that operate on the
+whole buffer rather than the current position.
+It will filter by KIND if non nil."
+  (lsp-request "textDocument/codeAction" (lsp--text-document-code-action-params kind t)))
+
+(defun lsp-execute-code-action-by-kind-buffer-wide (command-kind)
+  "Execute code action by COMMAND-KIND for the entire buffer.
+Unlike `lsp-execute-code-action-by-kind', this function passes the entire
+buffer range and all diagnostics to the language server."
+  (if-let* ((action (->> (lsp-code-actions-buffer-wide command-kind)
+                        (-filter (-lambda ((&CodeAction :kind?))
+                                   (and kind? (s-prefix? command-kind kind?))))
+                        lsp--select-action)))
+      (lsp-execute-code-action action)
+    (signal 'lsp-no-code-actions '(command-kind))))
+
+(defun lsp-fix-all ()
+  "Perform the source.fixAll code action for the entire buffer, if available.
+This action fixes all auto-fixable issues in the buffer."
+  (interactive)
+  (let ((lsp-auto-execute-action t))
+    (condition-case nil
+        (lsp-execute-code-action-by-kind-buffer-wide "source.fixAll")
+      (lsp-no-code-actions
+       (when (called-interactively-p 'any)
+         (lsp--info "source.fixAll action not available"))))))
 
 (defun lsp--make-document-range-formatting-params (start end)
   "Make DocumentRangeFormattingParams for selected region."
@@ -9470,6 +9533,7 @@ Errors if there are none."
   (lsp-managed-mode -1)
   (lsp-mode -1)
   (remove-hook 'before-save-hook #'lsp--format-buffer-before-save t)
+  (remove-hook 'before-save-hook #'lsp--fix-all-before-save t)
   (setq lsp--buffer-workspaces nil)
   (lsp--info "Disconnected"))
 
@@ -9518,7 +9582,10 @@ argument ask the user to select which language server to start."
                         (lsp--try-project-root-workspaces (equal arg '(4))
                                                           (and arg (not (equal arg 1))))))
           (lsp-mode 1)
+          ;; Register before-save hooks. Emacs runs hooks in reverse order,
+          ;; so fix-all runs before format (fix issues first, then format).
           (add-hook 'before-save-hook #'lsp--format-buffer-before-save nil t)
+          (add-hook 'before-save-hook #'lsp--fix-all-before-save nil t)
           (when lsp-auto-configure (lsp--auto-configure))
           (setq lsp-buffer-uri (lsp--buffer-uri))
           (lsp--info "Connected to %s."
